test/fail/import/repeat_main.lly
#[
SyntaxError: Package 'repeat_a' has already been imported in this file.
    from repeat_main.lly:7
]#

import repeat_a
import repeat_a
